tests/samples/negative/expressions/if_expression_condition.ax
module if_expression_condition;

fn main() -> i32 {
    return if 1 { 1 } else { 0 };
}
